@@ -5,10 +5,13 @@ V0.90
 - NEW : Sort order for images (in porgess !!!)
 - Changed : New default parameter for ImageRotator 3.15
 - Added   : Change wp shortcode filter 
-- Added   : TinyMCE V3 Button for WordPress 2.5 
+- Added   : TinyMCE V3 Button for WordPress 2.5
+- Added   : Singlepic center class 
 - Changed : wpdb->escape gallerytag in nggfunctions.
 - Changed : Sort files after scan folder
 - Changed : Check for filename during upload
+- Bugfix  : P tags not closed in manage.php
+- Bugfix  : Remove " from singlepic class
 
 V0.83 - 14.02.2008
 - Changed : New Interfaces.js from WP Core 2.5, for sortable bug under IE7
